# deliverycenter_dwh

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
dashboard/: dc_report.pbip
dashboard/dc_report.Report/: .platform  definition.pbir  report.json
dashboard/dc_report.Report/.pbi/: localSettings.json
dashboard/dc_report.Report/StaticResources/RegisteredResources/: Custom7484540301617305.json
dashboard/dc_report.SemanticModel/: .platform  diagramLayout.json
dashboard/dc_report.SemanticModel/.pbi/: localSettings.json
dashboard/dc_report.SemanticModel/definition/: model.tmdl  relationships.tmdl
dashboard/dc_report.SemanticModel/definition/cultures/: pt-BR.tmdl
dashboard/dc_report.SemanticModel/definition/tables/: @measures.tmdl  DateTableTemplate_52df1472-2008-45de-8f99-f0f630eae3d3.tmdl  LocalDateTable_f181baed-5d39-451f-aaaa-6cb9d9f2763f.tmdl  dim_channels.tmdl  dim_dates.tmdl  dim_drivers.tmdl  dim_hubs.tmdl  dim_measures .tmdl  dim_stores.tmdl  fct_orders_deliveries.tmdl
dwh/: dbt_project.yml
dwh/models/bronze/: bronze_channels.sql  bronze_deliveries.sql  bronze_drivers.sql  bronze_hubs.sql  bronze_orders.sql  bronze_payments.sql  bronze_stores.sql  source.yml
dwh/models/gold/dims/: dim_channels.sql  dim_dates.sql  dim_drivers.sql  dim_hubs.sql  dim_stores.sql  schema.yml
dwh/models/gold/facts/: fct_orders_deliveries.sql  schema.yml
dwh/models/silver/: schema.yml  silver_channels.sql  silver_deliveries.sql  silver_drivers.sql  silver_hubs.sql  silver_orders.sql  silver_payments.sql  silver_stores.sql
src/: data_ingestion.py
